fix url cors accepted hosts

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,4 +95,4 @@ nelmio_cors:
             allow_headers: ['*']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
-            hosts: ['^api\.']
+#            hosts: ['^api\.']
